name:                blog
version:             0.1.0.0
synopsis:            Minimal blog handler
description:         The idea is to write an application to replace static web pages on tenggren.net
homepage:            http://tenggren.net
license:             BSD3
author:              Niclas Tenggren
maintainer:          niclas@tenggren.net
copyright:           2017 Niclas Tenggren
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable blog
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , lucid
                     , mongoDB
                     , http-types
                     , bson
                     , mtl
                     , text
                     , transformers
                     , network
